# Proiect_Tpaste

./: README.md
project/: Cargo.toml  cookie_Tibi.txt  cookie_user.txt  pastes.json  users.json
project/src/: main.rs  server.rs
